--- a/package.json
+++ b/package.json
@@ -48,12 +48,14 @@
     "axios": "^0.18.0",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.0.0",
+    "css-loader": "^3.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.1",
     "history": "^4.9.0",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
     "morgan": "^1.9.1",
+    "node-sass": "^4.12.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^2.0.0",
     "pg": "^7.9.0",
@@ -66,11 +68,14 @@
     "react-router-dom": "^5.0.0",
     "react-stripe-checkout": "^2.6.3",
     "react-stripe-elements": "^3.0.0",
+    "react-toastify": "^5.3.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
     "sequelize": "^5.3.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "style-loader": "^0.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
